# lasse-web

./: README.md  package-lock.json  package.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/root/: index.html
lasseweb/: manage.py
lasseweb/lasseweb/: asgi.py  settings.py  urls.py  wsgi.py
