[tool.poetry]
name = "lasse-web"
version = "0.1.0"
description = ""
authors = ["Lasse Fredheim <lass@uio.no>"]
readme = "README.md"
packages = [{include = "lasse_web"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
